--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "autoprefixer": "^10.4.12",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -26,6 +27,7 @@
     "bulma": "^0.9.4",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.0.0",
+    "prismjs": "^1.29.0",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0"
   },
