package.json: Add postcss dependency

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm-run-all --parallel css-watch js-watch eleventy-watch",
     "css-build": "sass src/_sass/main.scss src/css/main.css",
     "css-deploy": "npm run css-build && npm run css-postcss",
-    "css-postcss": "postcss --use autoprefixer --output src/css/main.css src/css/main.css",
+    "css-postcss": "node_modules/.bin/postcss --use autoprefixer --output src/css/main.css src/css/main.css",
     "css-watch": "npm run css-build -- --watch",
     "js-build": "babel src/_javascript --out-dir src/js",
     "js-watch": "npm run js-build -- --watch",
@@ -26,6 +26,7 @@
     "babel-preset-es2015-ie": "^6.7.0",
     "bulma": "^0.9.4",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.19",
     "postcss-cli": "^10.0.0",
     "prismjs": "^1.29.0",
     "sass": "^1.55.0",
