--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm-run-all --parallel css-watch js-watch eleventy-watch",
     "css-build": "sass src/_sass/main.scss src/css/main.css",
     "css-deploy": "npm run css-build && npm run css-postcss",
-    "css-postcss": "node_modules/.bin/postcss --use autoprefixer --output src/css/main.css src/css/main.css",
+    "css-postcss": "node_modules/.bin/postcss --map --use autoprefixer --output src/css/main.css src/css/main.css",
     "css-watch": "npm run css-build -- --watch",
     "js-build": "babel src/_javascript --out-dir src/js",
     "js-watch": "npm run js-build -- --watch",
