--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-ie": "^6.7.0",
     "bulma": "^0.9.4",
+    "luxon": "^3.1.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.0.0",
