--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "eleventy-plugin-toc": "^1.1.5",
+    "highcharts": "^10.3.2",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5"
   }
