--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass-loader": "^13.1.0"
   },
   "dependencies": {
+    "eleventy-plugin-embed-everything": "^1.17.0",
     "eleventy-plugin-toc": "^1.1.5",
     "highcharts": "^10.3.2",
     "markdown-it": "^13.0.1",
